--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,13 @@ body {
 
 body {
   color: #747373;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: white;
 }
 
 h1 {
   color: #3199d1;
-  font-family: 'Gruppo', sans-serif;
+  font-family: "Gruppo", sans-serif;
   font-size: 2.5rem;
   padding-bottom: 32px;
   width: 100%;
@@ -40,44 +40,36 @@ header {
 
 .gradient {
   /* Learn more about creating a linear gradient: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient */
-  background: linear-gradient(180deg, #377a9000 88.54%, #63bff040 100%), #FFF;
+  background: linear-gradient(180deg, #377a9000 88.54%, #63bff040 100%), #fff;
 }
 
 header,
 section,
 footer {
-  /* Add a Flexbox property to make the content-wrapper a flex parent container. */
-
-  /* Add a Flexbox property to center the contents of each section. */
-
+  display: flex;
+  justify-content: center;
 }
 
 .content-wrapper {
   width: 90%;
   max-width: 1200px;
-  /* Add a Flexbox property to make the content-wrapper a flex parent container. */
-
-  /* Add the Flexbox property flex-flow: row wrap; to allow the flex child items to wrap. */
-
+  display: flex;
+  flex-flow: row wrap;
   margin: 50px 0;
 }
 
 .header-content-wrapper {
-  /* Add a Flexbox property to make the header-content-wrapper a flex parent container. */
-
-  /* Add a Flexbox property to center the contents of the header. */
-
-  /* Add a Flexbox property to align the contents at their center. */
-
-  /* Add the Flexbox property flex-flow: row wrap; to allow the flex child items to wrap. */
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
   width: 100%;
   padding-bottom: 50px;
 }
 
 .booking-link {
   text-decoration: none;
-  background: #2C7BA5;
+  background: #2c7ba5;
   padding: 20px 30px;
   border-radius: 5px;
   color: white;
@@ -85,10 +77,9 @@ footer {
 }
 
 .about-content-wrapper {
-  /* Add a Flexbox property to make the about-content-wrapper a flex parent container. */
-
-  /* Add a Flexbox property to center the paragraph in the header. */
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .about-info {
@@ -96,20 +87,15 @@ footer {
 }
 
 .services-content-wrapper {
-  /* Add a Flexbox property to make the services-content-wrapper a flex parent container. */
-
-  /* Add a justify-content property and value so that any extra space in the parent container is between the child flex items as the layout changes and more than one card is on a row.  */
-
-  /* Add the Flexbox property flex-flow: row wrap; to allow the flex child items to wrap. */
-
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
 }
 
 .services-description {
   width: 100%;
-  /* Add a Flexbox property to make the services-content-wrapper a flex parent container. */
-
-  /* Add flex-direction: column; so that the services card's child flex items are laid out in a column. */
-
+  display: flex;
+  flex-direction: column;
   margin-bottom: 50px;
 }
 
@@ -127,14 +113,10 @@ footer {
 }
 
 .testimonial-content-wrapper {
-  /* Add a Flexbox property to make the testimonial-content-wrapper a flex parent container. */
-
-  /* Add a justify-content property and value so that any extra space if the parent container is between the child flex items.  */
-
-  /* Add the Flexbox property flex-flow: row wrap; to allow the flex child items to wrap. */
-
-  /* Add align-items: flex-start; so that the background adjusts to the height of the testimonial. */
-
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  align-items: flex-start;
 }
 
 .testimonial {
@@ -146,12 +128,9 @@ footer {
 }
 
 .footer-content-wrapper {
-  /* Add a Flexbox property to make the testimonial-content-wrapper a flex parent container. */
-
-  /* Add a justify-content property and value so that any extra space if the parent container is around the child flex items.  */
-
-  /* Add a Flexbox property to align the contents at their center. */
-
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .contact-wrapper {
@@ -178,15 +157,12 @@ footer {
 
   .services-description {
     width: 100%;
-    /* Add flex-direction: row; so that the services cards layout changes to a row orientation. */
-
-    /* Add a justify-content property and value so that any extra space if the parent container is between the child flex items.  */
-
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .wrap-reverse {
-    /* Add flex-direction: row-reverse; to change the direction of the second service */
-
+    flex-direction: row-reverse;
   }
 
   .services-image {
@@ -211,13 +187,11 @@ footer {
   .contact-wrapper {
     margin-bottom: 0;
   }
-
 }
 
 @media (min-width: 1200px) {
   .header-content-wrapper {
-    /* Add a justify-content property and value so that any extra space if the parent container is between the h1 and "Book a Consultation link.  */
-
+    justify-content: space-between;
   }
 
   h1 {
@@ -231,10 +205,8 @@ footer {
 
   .services-description {
     width: 25%;
-    /* Add flex-direction: column; so that the services card's child flex items are laid out in a column again. */
-
-    /* Add justify-content: flex-start; so the text is aligned at the top. */
-
+    flex-direction: column;
+    justify-content: flex-start;
     margin-bottom: 0;
   }
 
